<resources>
    <string name="app_name">MTGLifeTracker</string>
    <string name="EDH_initial_life_total">40</string>
    <string name="settings_content_description">Settings</string>
    <string name="reset_current_game_formatted">Reset current (%d players) game</string>
    <string name="enter_starting_life">Enter starting life</string>
    <string name="player_settings">Player settings</string>
    <string name="no_profiles_created_yet">No profiles created yet.</string>
    <string name="add_new_profile">Add new profile</string>
    <string name="choose_a_profile">Choose a profile…</string>
    <string name="delete_profile">Delete profile</string>
    <string name="nickname_required">Nickname (required)</string>
    <string name="choose_a_color_optional">Choose a color (optional)</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="back">Back</string>
    <string name="title_player_count">Number of Players</string>
    <string name="title_starting_life">Starting Life</string>
    <string name="title_confirm_reset">Confirm Reset</string>
    <string name="title_custom_starting_life">Custom Starting Life</string>
    <string name="title_manage_profiles">Manage Profiles</string>
    <string name="title_create_profile">Create Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_manage_specific_profile">Manage %1$s</string>
    <string name="title_delete_profile">Delete Profile</string>
    <string name="player_counters">Player Counters</string>
    <string name="player_counters_title">%1$s Counters</string>
    <string name="commander_damage">Commander Damage</string>
    <string name="commander_damage_to_player">Commander Damage to %1$s</string>
    <string name="player_commander_damage_title">%1$s Commander Dmg</string>
    <string name="poison_counter_icon_description">Poison counter icon</string>
    <string name="me">Me</string>
    <string name="title_preferences">Preferences</string>
    <string name="auto_deduce_commander_damage">Automatically deduce commander damage</string>
</resources>