...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#2E2E2E"
        android:clickable="true"
        android:contentDescription="@string/settings_content_description"
        android:focusable="true"
...
