<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/iv_back_arrow"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_arrow_back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:padding="4dp"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/dialog_title" />
</RelativeLayout>