<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/et_custom_life"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_starting_life"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:maxLength="3" />

</LinearLayout>